msa.otusarchitect.homework/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: msa-otusarchitect
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: msa48/msaotusarchitecthomework:latest
        ports:
          - name: web
            containerPort: 80
        readinessProbe:
          httpGet:
            path: /health
            port: web
