msa.otusarchitect.homework/k8s/2_api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: msa-otusarchitect 
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 8000
    targetPort: web
